--- a/monews/base/templates/base/base.html
+++ b/monews/base/templates/base/base.html
@@ -14,6 +14,11 @@
     <div class="container">
       <div class="page-header">
         <h1>{{ _('MoNews - Mozilla News Aggregator') }}</h1>
+        <p class="lead">
+          {% trans %}
+            A semi-curated collection of news from across the Mozilla Project.
+          {% endtrans %}
+        </p>
       </div>
 
       <div class="content">
